# ldbc_graphalytics_platforms_graphblas

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  README.md  clean-and-build.sh  init.sh  pom.xml  project-vars.sh  run.sh  workflow.graphml
.circleci/: config.yml
GraphBLAS/: CMakeLists.txt
GraphBLAS/Include/: bfs_source.h  printer.h
GraphBLAS/Matrix/: bfs  example  lcc  lpa  pagerank  sssp  sssp_small  wcc
GraphBLAS/Program/: bfs.c  lpa.c  pagerank.c  sssp.c  wcc.c
GraphBLAS/Source/: bfs_source.c  printer.c
GraphBLAS/include/: demos.h  matrix_reader.h
GraphBLAS/src/: bfs.c  bfs_source.c  example.c  lcc.c  pagerank.c  wcc.c
GraphBLAS/src/utils/: matrix_reader.c
GraphBLAS_TL/: CMakeLists.txt
GraphBLAS_TL/include/: commons.h
GraphBLAS_TL/src/: bfs.cpp
GraphLoader/: CMakeLists.txt
GraphLoader/include/: graphalytics_loader.hpp
GraphLoader/src/: graphalitics_loader.cpp
config-template/: benchmark.properties  platform.properties
config-template/benchmarks/: custom.properties
example-data-sets/: test-bfs-directed-BFS  test-lcc-directed-LCC  test-pr-directed.e  test-sssp-directed-SSSP  test-sssp-undirected.e
example-data-sets/graphs/: test-bfs-directed.e  test-bfs-undirected-BFS  test-bfs-undirected.e  test-cdlp-directed-CDLP  test-cdlp-directed.e  test-cdlp-undirected-CDLP  test-cdlp-undirected.e  test-lcc-directed.e  test-lcc-undirected-LCC  test-lcc-undirected.e  test-pr-undirected.e  test-sssp-directed.e  test-sssp-undirected-SSSP  test-wcc-directed-WCC  test-wcc-directed.e  test-wcc-undirected.e
example-data-sets/matrices/: example-directed-fp64.mtx  example-undirected-fp64.mtx
graphalytics-impls-graphblas/: CMakeLists.txt
graphalytics-impls-graphblas/data/ValidationGraphs/lcc/: undir-output
graphalytics-impls-graphblas/src/GBTL/: CMakeLists.txt
graphalytics-impls-graphblas/src/GBTL/include/: utils.hpp
graphalytics-impls-graphblas/src/GBTL/src/: lcc.cpp  utils.cpp
graphalytics-impls-graphblas/src/GraphBLAS/: CMakeLists.txt
graphalytics-impls-graphblas/src/GraphBLAS/include/: bfs_source.h
graphalytics-impls-graphblas/src/GraphBLAS/src/: bfs.c  lcc.c  pagerank.c  sssp.c  utils.c  wcc.c
graphalytics-impls-graphblas/src/libs/GraphalitycsLoader/include/: graphalitics_common.h  graphalytics_import.h
graphalytics-impls-graphblas/src/libs/GraphalitycsLoader/src/: graphalitics_import.c
graphalytics-platforms-ejml/: .gitignore  pom.xml
graphalytics-platforms-ejml/src/main/java/science/atlarge/graphalytics/ejml/: EjmlCollector.java
graphalytics-platforms-ejml/src/test/java/science/atlarge/graphalytics/ejml/: ValidationGraphLoader.java
graphalytics-platforms-graphblas/: README.md
graphalytics-platforms-graphblas/src/main/c/: CMakeLists.txt
graphalytics-platforms-graphblas/src/main/c/include/: graphio.h
graphalytics-platforms-graphblas/src/main/c/src/: utils.cpp
graphalytics-platforms-graphblas/src/main/c/src/algorithms/: lcc.cpp
graphalytics-platforms-graphblas/src/main/java/science/atlarge/graphalytics/graphblas/: GraphblasCollector.java  GraphblasPlatform.java
graphalytics-platforms-graphblas/src/main/resources/: log4j.properties
ldbc-graphalytics-cpp/: CMakeLists.txt
ldbc-graphalytics-cpp/src/GraphBLAS/include/: utils.h
ldbc-graphalytics-cpp/src/GraphBLAS/src/: bfs.c  bfs_source.c  lcc.c  lpa.c  utils.c
ldbc-graphalytics-cpp/src/libs/GraphalitycsLoader/: CMakeLists.txt
ldbc-graphalytics-cpp/src/libs/GraphalitycsLoader/src/: graphalitics_import.c
reporting/: .gitignore  plot-thesis.R  plot.R  results.csv
scripts/: init-for-testing.sh  init.sh  install-dependencies.sh  install-graphblas.sh  install-lagraph.sh  install-prerequisites.sh  project-vars.sh
src/main/c/: CMakeLists.txt  README.md
src/main/c/cmake_modules/: FindLAGraph.cmake
src/main/c/data/: sssp-minimal.csv
src/main/c/include/: computation_timer.hpp  graphio.h  utils.h
src/main/c/src/: graphio.c  graphio.cpp  utils.c  utils.cpp
src/main/c/src/algorithms/: bfs.cpp  cdlp.cpp  lcc.cpp  pr.cpp  sssp.cpp  wcc.cpp
src/main/c/src/algoritms/: bfs.cpp  lcc.c  lcc.cpp
src/main/c/src/tools/: converter.cpp
src/main/java/science/atlarge/graphalytics/ejml/: EjmlConfiguration.java  EjmlGraph.java  EjmlJob.java  EjmlLoader.java  EjmlPlatform.java  ProcTimeLog.java
src/main/java/science/atlarge/graphalytics/ejml/algorithms/lcc/: LocalClusteringCoefficientComputation.java  LocalClusteringCoefficientJob.java
src/main/java/science/atlarge/graphalytics/graphblas/: GraphblasCollector.java  GraphblasConfiguration.java  GraphblasJob.java  GraphblasLoader.java  GraphblasPlatform.java  ProcTimeLog.java
src/main/java/science/atlarge/graphalytics/graphblas/algorithms/bfs/: BreadthFirstSearchJob.java
src/main/java/science/atlarge/graphalytics/graphblas/algorithms/cdlp/: CommunityDetectionLPJob.java
src/main/java/science/atlarge/graphalytics/graphblas/algorithms/lcc/: LocalClusteringCoefficientJob.java
src/test/java/science/atlarge/graphalytics/ejml/: EjmlGraphTests.java
utils/: test_input_to_dot.py  tuple_counter.py
(+10 files in other folders)
